--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.6/scrollreveal.js"></script>
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- Tideo Chat App Script -->
     <script src="//code.tidio.co/ccqierfsm7fumwooduc3idbe3numywqt.js" async></script>
@@ -35,45 +36,57 @@
     <div class="main-container">
 
         <!-- Navbar start -->
-        <nav class="navbar navbar-expand-lg fixed-top">
-            <div class="container">
-
-                <a class="navbar-brand" href="index.html">M<span>D</span>I</a>
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-lg-auto">
-                        <li class="nav-item">
-                            <a href="index.html" class="nav-link smoothScroll active">Home</a>
+        <nav class="fixed-top">
+            <div class="navbar">
+                <i class='bx bx-menu'></i>
+                <div class="logo"><a href="#">M<span class="clr">D</span>I</a></div>
+                <div class="nav-links">
+                    <div class="sidebar-logo">
+                        <span class="logo-name">M<span class="clr">D</span>I</span>
+                        <i class='bx bx-x'></i>
+                    </div>
+                    <ul class="links">
+                        <li><a href="#">HOME</a></li>
+                        <li>
+                            <a href="#">HTML & CSS</a>
+                            <i class='bx bxs-chevron-down htmlcss-arrow arrow  '></i>
+                            <ul class="htmlCss-sub-menu sub-menu">
+                                <li><a href="#">Web Design</a></li>
+                                <li><a href="#">Login Forms</a></li>
+                                <li><a href="#">Card Design</a></li>
+                                <li class="more">
+                                    <span><a href="#">More</a>
+                                        <i class='bx bxs-chevron-right arrow more-arrow'></i>
+                                    </span>
+                                    <ul class="more-sub-menu sub-menu">
+                                        <li><a href="#">Neumorphism</a></li>
+                                        <li><a href="#">Pre-loader</a></li>
+                                        <li><a href="#">Glassmorphism</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
                         </li>
-
-                        <li class="nav-item">
-                            <a href="services.html" class="nav-link smoothScroll">Services</a>
+                        <li>
+                            <a href="#">JAVASCRIPT</a>
+                            <i class='bx bxs-chevron-down js-arrow arrow '></i>
+                            <ul class="js-sub-menu sub-menu">
+                                <li><a href="#">Dynamic Clock</a></li>
+                                <li><a href="#">Form Validation</a></li>
+                                <li><a href="#">Card Slider</a></li>
+                                <li><a href="#">Complete Website</a></li>
+                            </ul>
                         </li>
-
-                        <li class="nav-item">
-                            <a href="portfolio.html" class="nav-link smoothScroll">Portfolio</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a href="#about" class="nav-link smoothScroll">About</a>
-                        </li>
-
-                        <!-- <li class="nav-item">
-                        <a href="#schedule" class="nav-link smoothScroll"></a>
-                    </li> -->
-
-                        <li class="nav-item">
-                            <a href="#contact" class="nav-link smoothScroll">Contact</a>
-                        </li>
+                        <li><a href="#">SERVICES</a></li>
+                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="#">CONTACT US</a></li>
                     </ul>
-
                 </div>
-
+                <div class="search-box">
+                    <i class='bx bx-search'></i>
+                    <div class="input-box">
+                        <input type="text" placeholder="Search...">
+                    </div>
+                </div>
             </div>
         </nav>
         <!-- Navbar end -->
@@ -82,13 +95,17 @@
         <!-- Header parts start -->
         <section class="hero d-flex flex-column justify-content-center align-items-center" id="home">
 
+            <section id="section07" class="demo">
+                <a href="#portfolio-section"><span></span><span></span><span></span></a>
+            </section>
+
             <div class="bg-overlay"></div>
 
             <div class="container-padding">
                 <div class="row">
 
                     <div class="col-lg-12 col-md-12 mx-auto col-12">
-                        <div class="hero-text mt-5 text-left">
+                        <div class="hero-text mt-5 text-center">
 
                             <h6 class="name" data-aos="fade-up" data-aos-delay="300">Md. Danish Iqbal</h6>
                             <h1 class="headline">WEBSITE : <span class="animate"></span></h1>
@@ -159,7 +176,7 @@
 
 
         <!-- Our work/project start -->
-        <section class="portfolio-section">
+        <section class="portfolio-section" id="portfolio-section">
             <div class="container-padding">
                 <div class="row">
                     <div class="col-md-8">
